# metaprivBIDS-Outer

./: .gitignore  .readthedocs.yaml  LICENSE  MetaprivBIDS_CoreLogic_Tutorial.ipynb  MetaprivBIDS_environment.yml  README.md  data_mod_noise.csv  dependencies.py  metaprivBIDS.py  pyproject.toml  requirements.txt
.github/workflows/: pytest.yml
.ipynb_checkpoints/: MetaprivBIDS_CoreLogic_Tutorial-checkpoint.ipynb
MetaAsses/: PIF_dataset2.csv  SUDA_sum_dataset1.csv  SUDA_sum_dataset2.csv  SUDA_sum_dataset3.csv  combinedresult_dataset1.csv  combinedresult_dataset2.csv  combinedresult_dataset3.csv  dataset2.csv  metaprivBIDS_Assessment .ipynb  suda_sum_ds2_1_8.csv  sudaresult_dataset1.csv  sudaresult_dataset3.csv
MetaAsses/.ipynb_checkpoints/: metaprivBIDS_Assessment -checkpoint.ipynb
MetaprivBIDS_Assessment/: suda_sum_1_9_ds3.csv
MetaprivBIDS_Assessment /: PIF_dataset1.csv  PIF_dataset3.csv  dataset3.csv  metaprivBIDS_Assessment .ipynb  sudaresult_dataset2.csv
MetaprivBIDS_Assessment /.ipynb_checkpoints/: metaprivBIDS_Assessment -checkpoint.ipynb
Use Case/: NIMH_Test_Case.md  adult_mini.csv  use_case_2.1.md
docs/: conf.py  examples.rst  getting_started.rst  index.rst  modules.rst
docs/_build/doctrees/: environment.pickle  examples.doctree  getting_started.doctree  index.doctree  metaprivBIDS.doctree  modules.doctree
docs/_build/html/: .buildinfo  examples.html  genindex.html  getting_started.html  index.html  metaprivBIDS.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: examples.rst.txt  getting_started.rst.txt  index.rst.txt  metaprivBIDS.rst.txt
metaprivBIDS/: metaprivBIDS.py  metaprivBIDS_core_logic.py  suda_adapted.py
metaprivBIDS.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
metaprivBIDS/corelogic/: metapriv_corelogic.py
tests/: test_metaprivBIDS_core_logic.py
