[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metaprivBIDS"
version = "0.1.0"
description = "A tool for assessing data privacy in tabular data."
authors = [{name = "Emilie B. Kibsgaard", email = "em_kibsgaard@outlook.dk"},{name = "Cyril Pernet", email = "cyrilmail@input.com"}]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.7.4"



dependencies = [
    "pytest>=3.0.5",
    "seaborn>=0.11.0",
    "pandas>=1.3.5",
    "matplotlib>=3.5.1",
    "PySide6>=6.5.2",
    "networkx>=2.6.3",
    "numpy>=1.21.6"
]

[project.scripts]
metaprivBIDS = 'metaprivBIDS.metaprivBIDS:main'

[project.urls]
repository = "https://github.com/cpernet/metaprivBIDS"

[tool.setuptools]
packages = ["metaprivBIDS"]
