[build-system]
requires = ["setuptools<81", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "metaprivBIDS"
version = "0.1.0"
description = "A tool for assessing data privacy in tabular data."
authors = [{name = "Emilie B. Kibsgaard", email = "em_kibsgaard@outlook.dk"},{name = "Cyril Pernet", email = "cyrilmail@input.com"}]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.7.4"

dependencies = [
    "pygraphviz>=1.7",
    "graphviz>=0.14",
    "tqdm>=4.62.3",
    "pytest>=3.0.5",
    "seaborn>=0.11.0",
    "pandas>=1.3.5",
    "matplotlib>=3.5.1",
    "PySide6>=6.5.2",
    "networkx>=2.6.3",
    "numpy>=1.21.6",
    "piflib>=0.1.1",
    "scipy>=1.7.3",
    "setuptools>=42"
]

[project.scripts]
metaprivBIDS = 'metaprivBIDS.metaprivBIDS:main'

[project.urls]
repository = "https://github.com/cpernet/metaprivBIDS"

[tool.setuptools]
packages = ["metaprivBIDS", "metaprivBIDS.corelogic"]

[project.optional-dependencies]
docs = [
    "sphinx>=4.0",
    "sphinx_rtd_theme>=1.0",
    "myst-parser>=0.13"  # If using Markdown with Sphinx
]

[tool.codespell]
# Ref: https://github.com/codespell-project/codespell#using-a-config-file
skip = '.git*,*.svg,*.css,*.min.*,_build'
check-hidden = true
ignore-regex = '^\s*"image/\S+": ".*'
# ignore-words-list = ''
